Sweep out the rest of the per-launch hash orders
Last tick's booster bug was the second time this codebase has been bitten
by Map.copyOf, so this is the sweep for everywhere else it decides
something. Seven sites, and the two that matter most were nowhere near
the boosters.

A card's counters are drawn as a stack of labels along its bottom edge,
which makes the order something a player reads - and it was a hash order
salted once per launch, so the stack reshuffled every time the game
started. The seat's own counters have been kept in order since the day
they were added, with a comment saying why; the card's were not. One rule
meaning two different things depending on whether the counter was on a
card or beside a board.

A table held its decks in a hash order too. Putting them back down
between games of a set writes a line in the session log for each, so that
order is the log's order - and the log is the record everybody is
supposed to be able to check afterwards. The same match would have read
differently every time the server started.

The rest are quieter but real. A seat view went to the trouble of sorting
its zones into an EnumMap and then copied it into a hash order, so the
comment promising that two views of one board list their zones the same
way was true of the sort and false of what came out of it. Commander
damage, commander tax, a pod's counts and a match's score are all walked
to write something into bytes, so each of them encoded the same state
differently on every start. And a collection result's values are handed
on as a list, which came back in a different order for the same request.

Left alone where the order decides nothing: a travel's spots and a card's
legalities are asked by key and never walked.

Guarded where it is visible: counters on a card and beside a seat come
back in the order they were put on, and a table holds and hands back its
decks in the order it was given them. Both verified by putting Map.copyOf
back and watching them fail.

Non